<resources>
    <string name="app_name">Sudoku Puzzle</string>

    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Ten">10</string>
    <string name="Playing">You can do it!</string>
    <string name="Restart">Restart</string>
    <string name="New">New Game</string>
    <string name="Delete">Delete</string>
    <string name="unfinsihed">Missing numbers!</string>
    <string name="solve" value="solve">Check</string>
    <string name="correct" value="correct">Correct!</string>
    <string name="wrong" value="wrong">Something is wrong</string>
</resources>